--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -9,6 +9,46 @@
   doi={10.1093/bioinformatics/btw214},
 }
 
+@inproceedings{SciQ,
+    title={Crowdsourcing Multiple Choice Science Questions},
+    author={Johannes Welbl, Nelson F. Liu, Matt Gardner},
+    year={2017},
+    journal={arXiv:1707.06209v1}
+}
+
+@misc{alpaca,
+  author = {Rohan Taori and Ishaan Gulrajani and Tianyi Zhang and Yann Dubois and Xuechen Li and Carlos Guestrin and Percy Liang and Tatsunori B. Hashimoto },
+  title = {Stanford Alpaca: An Instruction-following LLaMA model},
+  year = {2023},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/tatsu-lab/stanford_alpaca}},
+}
+
+@misc{reimers2019sentencebertsentenceembeddingsusing,
+      title={Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks}, 
+      author={Nils Reimers and Iryna Gurevych},
+      year={2019},
+      eprint={1908.10084},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/1908.10084}, 
+}
+
+@online{emb2024mxbai,
+  title={Open Source Strikes Bread - New Fluffy Embeddings Model},
+  author={Sean Lee and Aamir Shakir and Darius Koenig and Julius Lipp},
+  year={2024},
+  url={https://www.mixedbread.ai/blog/mxbai-embed-large-v1},
+}
+
+@article{li2023angle,
+  title={AnglE-optimized Text Embeddings},
+  author={Li, Xianming and Li, Jing},
+  journal={arXiv preprint arXiv:2309.12871},
+  year={2023}
+}
+
 @article{CiTO,
 author = {Shotton, David},
 journal = {Journal of Biomedical Semantics},
