--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -9,6 +9,16 @@
   doi={10.1093/bioinformatics/btw214},
 }
 
+@misc{zhao2024wildchat1mchatgptinteraction,
+      title={WildChat: 1M ChatGPT Interaction Logs in the Wild}, 
+      author={Wenting Zhao and Xiang Ren and Jack Hessel and Claire Cardie and Yejin Choi and Yuntian Deng},
+      year={2024},
+      eprint={2405.01470},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2405.01470}, 
+}
+
 @inproceedings{SciQ,
     title={Crowdsourcing Multiple Choice Science Questions},
     author={Johannes Welbl, Nelson F. Liu, Matt Gardner},
