--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -15,6 +15,14 @@
     journal={arXiv:1707.06209v1}
 }
 
+@misc{openai2024gpt4o,
+  author       = {{OpenAI}},
+  title        = {Hello {GPT-4O}},
+  howpublished = {\url{https://openai.com/index/hello-gpt-4o/}},
+  year         = {2024},
+  note         = {Accessed: 2024-08-31}
+}
+
 @misc{reimers2019sentencebertsentenceembeddingsusing,
       title={Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks}, 
       author={Nils Reimers and Iryna Gurevych},
