--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -16,8 +16,8 @@
 }
 
 @misc{openai2024gpt4o,
-  author       = {{OpenAI}},
-  title        = {Hello {GPT-4O}},
+  author       = {OpenAI},
+  title        = {Hello GPT-4O},
   howpublished = {\url{https://openai.com/index/hello-gpt-4o/}},
   year         = {2024},
   note         = {Accessed: 2024-08-31}
