--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -8,6 +8,14 @@
       url={https://arxiv.org/abs/2405.01470}, 
 }
 
+@misc{claude3,
+  title        = {Claude 3 Model Card},
+  author       = {Anthropic},
+  year         = 2024,
+  url          = {https://anthropic.com/claude-3-model-card},
+  note         = {Accessed: 2024-08-31}
+}
+
 @inproceedings{SciQ,
     title={Crowdsourcing Multiple Choice Science Questions},
     author={Johannes Welbl, Nelson F. Liu, Matt Gardner},
