--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -8,6 +8,14 @@
       url={https://arxiv.org/abs/2405.01470}, 
 }
 
+@misc{cohere2024commandrplus,
+  title        = {Command R+ Model Documentation},
+  author       = {Cohere},
+  year         = 2024,
+  url          = {https://docs.cohere.com/docs/command-r-plus},
+  note         = {Accessed: 2024-08-31}
+}
+
 @misc{claude3,
   title        = {Claude 3 Model Card},
   author       = {Anthropic},
