--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -10,7 +10,7 @@
 
 @misc{cohere2024commandr,
   title        = {Command R Model Documentation},
-  author       = {{Cohere}},
+  author       = {Cohere},
   year         = 2024,
   url          = {https://docs.cohere.com/docs/command-r},
   note         = {Accessed: 2024-08-31}
