--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -24,12 +24,11 @@
   note         = {Accessed: 2024-08-31}
 }
 
-@misc{claude3,
-  title        = {Claude 3 Model Card},
-  author       = {Anthropic},
-  year         = 2024,
-  url          = {https://anthropic.com/claude-3-model-card},
-  note         = {Accessed: 2024-08-31}
+@article{claude3,
+  title={The Claude 3 Model Family: Opus, Sonnet, Haiku},
+  author={Anthropic},
+  journal={Claude 3 Model Card},
+  year={2024}
 }
 
 @inproceedings{SciQ,
