--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -28,6 +28,7 @@
   title={The Claude 3 Model Family: Opus, Sonnet, Haiku},
   author={Anthropic},
   journal={Claude 3 Model Card},
+  url={https://anthropic.com/claude-3-model-card},
   year={2024}
 }
 
