Modify paper.bib for title capitalization

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -25,7 +25,7 @@
 }
 
 @article{claude3,
-  title={The Claude 3 Model Family: Opus, Sonnet, Haiku},
+  title={{The Claude 3 Model Family: Opus, Sonnet, Haiku}},
   author={Anthropic},
   journal={Claude 3 Model Card},
   url={https://anthropic.com/claude-3-model-card},
