Update paper.bib for cohere

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -9,7 +9,7 @@
 }
 
 @misc{cohere2024commandr,
-  title        = {Command R Model Documentation},
+  title        = {Command {R}},
   author       = {Cohere},
   year         = 2024,
   url          = {https://docs.cohere.com/docs/command-r},
@@ -17,7 +17,7 @@
 }
 
 @misc{cohere2024commandrplus,
-  title        = {Command R+ Model Documentation},
+  title        = {Command {R+}},
   author       = {Cohere},
   year         = 2024,
   url          = {https://docs.cohere.com/docs/command-r-plus},
