--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,11 +1,9 @@
-@misc{zhao2024wildchat1mchatgptinteraction,
-      title={WildChat: 1M ChatGPT Interaction Logs in the Wild}, 
+@article{zhao2024wildchat1mchatgptinteraction,
+      title={{WildChat: 1M ChatGPT Interaction Logs in the Wild}}, 
       author={Wenting Zhao and Xiang Ren and Jack Hessel and Claire Cardie and Yejin Choi and Yuntian Deng},
+      journal={ICLR 2024},
       year={2024},
-      eprint={2405.01470},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL},
-      url={https://arxiv.org/abs/2405.01470}, 
+      url={https://arxiv.org/abs/2405.01470}
 }
 
 @misc{cohere2024commandr,
