Update paper.bib for sciq

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -30,11 +30,13 @@
   year={2024}
 }
 
-@inproceedings{SciQ,
-    title={Crowdsourcing Multiple Choice Science Questions},
-    author={Johannes Welbl, Nelson F. Liu, Matt Gardner},
-    year={2017},
-    journal={arXiv:1707.06209v1}
+@article{SciQ,
+  title={Crowdsourcing Multiple Choice Science Questions},
+  author={Welbl, Johannes and Liu, Nelson F and Gardner, Matt},
+  journal={W-NUT 2017},
+  pages={94},
+  url={https://noisy-text.github.io/2017/pdf/WNUT13.pdf},
+  year={2017}
 }
 
 @misc{openai2024gpt4o,
