Update paper.bib for sbert

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -47,14 +47,12 @@
   note         = {Accessed: 2024-08-31}
 }
 
-@misc{reimers2019sentencebertsentenceembeddingsusing,
-      title={Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks}, 
+@article{reimers2019sentencebertsentenceembeddingsusing,
+      title={{Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks}}, 
       author={Nils Reimers and Iryna Gurevych},
-      year={2019},
-      eprint={1908.10084},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL},
+      journal={arXiv preprint arXiv:1908.10084},
       url={https://arxiv.org/abs/1908.10084}, 
+      year={2019},
 }
 
 @online{emb2024mxbai,
