--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -41,10 +41,9 @@
 
 @misc{openai2024gpt4o,
   author       = {OpenAI},
-  title        = {Hello GPT-4O},
-  howpublished = {\url{https://openai.com/index/hello-gpt-4o/}},
+  title        = {Hello GPT-4o},
+  url = {https://openai.com/index/hello-gpt-4o/},
   year         = {2024},
-  note         = {Accessed: 2024-08-31}
 }
 
 @article{reimers2019sentencebertsentenceembeddingsusing,
@@ -56,7 +55,7 @@
 }
 
 @online{emb2024mxbai,
-  title={Open Source Strikes Bread - New Fluffy Embeddings Model},
+  title={{Open Source Strikes Bread - New Fluffy Embeddings Model}},
   author={Sean Lee and Aamir Shakir and Darius Koenig and Julius Lipp},
   year={2024},
   url={https://www.mixedbread.ai/blog/mxbai-embed-large-v1},
