Update reference to mistral series

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -99,6 +99,20 @@
       url={https://arxiv.org/abs/2407.21783}, 
 }
 
+@online{mistral7b,
+  author={{Mistral AI}},
+  title={{Mistral 7B}},
+  year={2023},
+  url={https://mistral.ai/news/announcing-mistral-7b/},
+}
+
+@online{mistrallarge,
+  author={{Mistral AI}},
+  title={{Au Large}},
+  year={2024},
+  url={https://mistral.ai/news/mistral-large/},
+}
+
 @misc{jiang2024mixtralexperts,
       title={Mixtral of Experts}, 
       author={Albert Q. Jiang and Alexandre Sablayrolles and Antoine Roux and Arthur Mensch and Blanche Savary and Chris Bamford and Devendra Singh Chaplot and Diego de las Casas and Emma Bou Hanna and Florian Bressand and Gianna Lengyel and Guillaume Bour and Guillaume Lample and Lélio Renard Lavaud and Lucile Saulnier and Marie-Anne Lachaux and Pierre Stock and Sandeep Subramanian and Sophia Yang and Szymon Antoniak and Teven Le Scao and Théophile Gervet and Thibaut Lavril and Thomas Wang and Timothée Lacroix and William El Sayed},
